2005-08-28  Ben Maurer  <bmaurer@ximian.com>

	* Makefile.am (gtk-sharp-docs.zip gtk-sharp-docs.tree): Use
	mdassembler.

	* en/Gtk/NodeSelection.xml: Docs

2005-08-14  John Luke  <john.luke@gmail.com>

	* en/Gtk/IconView.xml: add iconview example
	based on GtkDemo code

2005-08-09  Dan Winship  <danw@novell.com>

	* en/index.xml: remove gda/gnomedb docs

	* en/Gda:
	* en/Gda.xml:
	* en/GnomeDb:
	* en/GnomeDb.xml: gone

2005-07-19  John Luke  <john.luke@gmail.com>

	* en/Gtk/TreeModelFilter.xml: add an example

2005-06-22  Mike Kestner  <mkestner@novell.com>

	* gen-vm-docs.cs : some monodocer formatting changes and attr lookup
	enhancements.

2005-06-16  Mike Kestner  <mkestner@novell.com>

	* en/*/*.xml : run the versionator to add since elements for 2.6.

2005-06-16  Mike Kestner  <mkestner@novell.com>

	* en/*/*.xml : run the versionator to add since elements for 2.4.

2005-06-10  Dan Winship  <danw@novell.com>

	* en/Gnome/App.xml (AppId):
	* en/Gnome/AppBar.xml (Interactivity, HasProgress, HasStatus):
	* en/Gtk/MessageDialog.xml (MessageType): now read-write

2005-06-06  Dan Winship  <danw@novell.com>

	* en/Gdk/PangoRenderer.xml: update return type of GetDefault

2005-06-01  Dan Winship  <danw@novell.com>

	* en/GLib/Value.xml: document the new string[] methods (and all of
	the previously-undocumented explicit cast operators).

	* en/Gtk/AboutDialog.xml: document Authors, Artists, Documenters.

2005-05-24  Dan Winship  <danw@novell.com>

	* en/Gdk/PixdataType.xml:
	* en/Gnome/PaperSelectorFlags.xml:
	* en/Gnome/PrintDialogFlags.xml:
	* en/Gnome/PrintDialogRangeFlags.xml:
	* en/Gnome/PrintUnitBase.xml: Regen, adding FlagsAttribute

	* en/index.xml
	* en/Gtk/ArgFlags.xml
	* en/Gtk/RcTokenType.xml: remove removed types

2005-05-23  Mike Kestner  <mkestner@novell.com>

	* Makefile.am : add an update-delete target for --delete.
	* en/*/*.xml : update-delete.

2005-05-23  Mike Kestner  <mkestner@novell.com>

	* Makefile.am : switch to monodocer
	* updater : kill