@@ -334,7 +334,7 @@ public class PixmapComposite
         <Parameter Name="height" Type="System.Int32" />
       </Parameters>
       <Docs>
-        <param name="src">To be added.</param>
+        <param name="src">Source <see cref="T:Gdk.Image" />.</param>
         <param name="cmap">A colormap (if src does not have one set) (A <see cref="T:Gdk.Colormap" /></param>
         <param name="src_x">Source X coordinate within drawable.</param>
         <param name="src_y">Source Y coordinate within drawable.</param>
@@ -493,7 +493,7 @@ public class PixmapComposite
         <Parameter Name="height" Type="System.Int32" />
       </Parameters>
       <Docs>
-        <param name="src">To be added.</param>
+        <param name="src">Destination pixbuf, or <see langword="null" /> if a new pixbuf should be created..</param>
         <param name="cmap">A colormap (if src does not have one set) (A <see cref="T:Gdk.Colormap" /></param>
         <param name="src_x">Source X coordinate within drawable.</param>
         <param name="src_y">Source Y coordinate within drawable.</param>
@@ -1804,10 +1804,10 @@ Gdk.Pixbuf pb = new Gdk.Pixbuf(buffer, 10, 10);
         <Parameter Name="angle" Type="Gdk.PixbufRotation" />
       </Parameters>
       <Docs>
-        <summary>To be added</summary>
-        <param name="angle">a <see cref="T:System.Int32" /></param>
-        <returns>a <see cref="T:Gdk.Pixbuf" /></returns>
-        <remarks>To be added</remarks>
+        <summary>Rotates a pixbuf by a multiple of 90 degrees, and returns the result in a new pixbuf.</summary>
+        <param name="angle">The angle to rotate by.</param>
+        <returns>A <see cref="T:Gdk.Pixbuf" />.</returns>
+        <remarks />
         <since version="Gtk# 2.6" />
       </Docs>
     </Member>
@@ -1821,10 +1821,10 @@ Gdk.Pixbuf pb = new Gdk.Pixbuf(buffer, 10, 10);
         <Parameter Name="horizontal" Type="System.Boolean" />
       </Parameters>
       <Docs>
-        <summary>To be added</summary>
-        <param name="horizontal">a <see cref="T:System.Boolean" /></param>
-        <returns>a <see cref="T:Gdk.Pixbuf" /></returns>
-        <remarks>To be added</remarks>
+        <summary>Flips a pixbuf horizontally or vertically.</summary>
+        <param name="horizontal"><see langword="true" /> to flip horizontally, <see langword="false" /> to flip vertically.</param>
+        <returns>A <see cref="T:Gdk.Pixbuf" />.</returns>
+        <remarks />
         <since version="Gtk# 2.6" />
       </Docs>
     </Member>
