@@ -1,3 +1,9 @@
+2006-03-01  Hector E. Gomez Morales  <hectorgm@ciencias.unam.mx>
+
+	* en/Gdk/PixbufRotation.xml
+	* en/Gdk/Pixbuf.xml
+	* en/Gdk/PixbufSaveFunc.xml: Docs.
+
 2005-08-28  Ben Maurer  <bmaurer@ximian.com>
 
 	* Makefile.am (gtk-sharp-docs.zip gtk-sharp-docs.tree): Use
